--- a/src/pages/CreateSurveyResponse.page
+++ b/src/pages/CreateSurveyResponse.page
@@ -1,4 +1,4 @@
-<apex:page controller="CreateSurveyResponseController" tabstyle="Survey_Response__c">
+<apex:page standardController="Survey_Response__c" extensions="CreateSurveyResponseController" tabstyle="Survey_Response__c">
   <apex:form >
     <apex:sectionHeader title="Surveys" subtitle="Create Response"/>
     <apex:pageMessages />
