--- a/src/pages/SurveyApp.page
+++ b/src/pages/SurveyApp.page
@@ -8,10 +8,10 @@
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
             
       <!-- JQuery Mobile -->
-	  <apex:includeScript value="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"/>
-	  <apex:includeScript value="//ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"/>
-      <apex:styleSheet value="//ajax.aspnetcdn.com/ajax/jquery.mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
-	  <apex:includeScript value="//ajax.aspnetcdn.com/ajax/jquery.mobile/1.3.1/jquery.mobile-1.3.1.min.js"/>
+	  <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js"/>
+	  <script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"/>
+      <link rel="stylesheet" type="text/css" href="//ajax.aspnetcdn.com/ajax/jquery.mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+	  <script src="//ajax.aspnetcdn.com/ajax/jquery.mobile/1.3.1/jquery.mobile-1.3.1.min.js"/>
 
 	  <c:SurveyStyle />
     </head>
